Fixed main.yml pipeline
Fixed the CI issues.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,10 @@ name: ci
 
 on:
   push:
+    branches:
+      - main
+jobs:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Login to Docker Hub
